--- a/index.html
+++ b/index.html
@@ -16,80 +16,234 @@
       href="https://devchallenges.io/"
     />
 
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap"
       rel="stylesheet"
     />
 
-    <title>Devchallenges</title>
+    <!-- ICONS -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Checkout</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
+    <section class="checkout-section">
+      <h1 class="heading-1">Checkout</h1>
+      <div class="container">
+        <div class="shopping-cart">
+          <!-- CARD 1 -->
+          <div class="card">
+            <img src="img/photo1.png" alt="Photo of a backbag" />
 
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+            <div class="wrapper">
+              <div class="text">
+                <p class="name">Vintage Backbag</p>
+                <p class="price">$54.99 <span>$94.99</span></p>
+              </div>
+              <div class="input-container">
+                <button id="decrement" class="btn--input">-</button>
+                <input
+                  type="number"
+                  id="my-input-number"
+                  min="0"
+                  max="50"
+                  step="1"
+                  value="1"
+                  readonly
+                />
+                <button id="increment" class="btn--input">+</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- CARD 2 -->
+          <div class="card mb">
+            <img src="img/photo2.png" alt="Photo of a backbag" />
+
+            <div class="wrapper">
+              <div class="text">
+                <p class="name">Levi Shoes</p>
+                <p class="price">$74.99 <span>$124.99</span></p>
+              </div>
+              <div class="input-container">
+                <button id="decrement2" class="btn--input">-</button>
+                <input
+                  type="number"
+                  id="my-input-number2"
+                  min="0"
+                  max="50"
+                  step="1"
+                  value="1"
+                  readonly
+                />
+                <button id="increment2" class="btn--input">+</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Price -->
+          <div class="total-container">
+            <div class="shipping">
+              <p class="shipping-title">Shipping</p>
+              <p class="shipping-price">$19</p>
+            </div>
+            <div class="total">
+              <p class="total-title">Total</p>
+              <p class="total-price">$148.98</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-container">
+          <form action="#" class="form" id="form">
+            <h3 class="heading-3">Contact information</h3>
+
+            <!-- FORM GROUP: EMAIL -->
+            <div class="form-group">
+              <label for="email">Email</label>
+              <div>
+                <span class="material-icons input-icon"> email </span>
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="Enter your email..."
+                  name="email"
+                  required
+                />
+              </div>
+            </div>
+
+            <!-- FORM GROUP: PHONE -->
+            <div class="form-group phone">
+              <label for="phone">Phone</label>
+              <div>
+                <span class="material-icons input-icon"> phone </span>
+                <input
+                  type="text"
+                  id="phone"
+                  placeholder="Enter your phone..."
+                  name="phone"
+                  required
+                />
+              </div>
+            </div>
+
+            <h3 class="heading-3">Shipping address</h3>
+            <!-- FORM GROUP: FULL NAME -->
+            <div class="form-group">
+              <label for="name">Full name</label>
+              <div>
+                <span class="material-icons input-icon"> account_circle </span>
+                <input
+                  type="text"
+                  id="name"
+                  placeholder="Enter your full name"
+                  name="name"
+                  value="Rodney Cotton"
+                  required
+                />
+              </div>
+            </div>
+
+            <!-- FORM GROUP: ADDRESS -->
+            <div class="form-group">
+              <label for="address">Address</label>
+              <div>
+                <span class="material-icons input-icon"> home </span>
+                <input
+                  type="text"
+                  id="address"
+                  placeholder="Your address.."
+                  name="address"
+                  required
+                />
+              </div>
+            </div>
+
+            <!-- FORM GROUP: CITY -->
+            <div class="form-group">
+              <label for="city">City</label>
+              <div>
+                <span class="material-icons input-icon"> location_city </span>
+                <input
+                  type="text"
+                  id="city"
+                  placeholder="Your city.."
+                  name="city"
+                  required
+                />
+              </div>
+            </div>
+
+            <div class="form-group-wrapper">
+              <!-- FORM GROUP: COUNTRY -->
+              <div class="form-group">
+                <label for="country">Country</label>
+                <div>
+                  <span class="material-icons input-icon"> location_city </span>
+                  <select
+                    name="country"
+                    id="country"
+                    placeholder="Your country.."
+                    required
+                  >
+                    <option disabled selected value>Your country..</option>
+                    <option value="united-states">United States</option>
+                    <option value="united-kingdom">United Kingdom</option>
+                    <option value="france">France</option>
+                  </select>
+                </div>
+              </div>
+
+              <!-- FORM GROUP: POSTAL CODE -->
+              <div class="form-group">
+                <label for="postal">Postal code</label>
+                <div>
+                  <span class="material-icons input-icon">
+                    markunread_mailbox
+                  </span>
+                  <input
+                    type="text"
+                    id="postal"
+                    placeholder="Your postal code.."
+                    name="postal"
+                    pattern="[0-9]{5}"
+                    required
+                  />
+                </div>
+              </div>
+            </div>
+
+            <!-- FORM GROUP: CHECKBOX -->
+            <div class="checkbox-container">
+              <input type="checkbox" id="cb1" />
+              <label for="cb1"> Save this information for next time </label>
+            </div>
+
+            <!-- SUBMIT BUTTON -->
+            <div class="form-group-button">
+              <button type="submit" id="btnSubmit">Continue</button>
+            </div>
+          </form>
+        </div>
       </div>
+    </section>
 
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+    <div class="alert" id="alert">
+      <span class="material-icons check"> check_circle </span>
+      <span class="msg">Success: We received your request!</span>
+      <span class="close-btn" id="closeBtn">
+        <span class="material-icons close"> close </span>
+      </span>
     </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
