--- a/index.html
+++ b/index.html
@@ -244,6 +244,11 @@
         <span class="material-icons close"> close </span>
       </span>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <p>created by <span>ghizlane-elatmani</span> - devChallenge.io</p>
+    </footer>
     <script src="js/app.js"></script>
   </body>
 </html>
